# treat_ui

./: README.md  pyproject.toml  report.html  requirements.txt
tests/: conftest.py  tests.md
tests/login/: test__login.py
tests/registration/: test__registration.py
treat_ui/config/browsers/: README.md  __init__.py  chrome_1.json
treat_ui/docker/: docker-compose.yaml
treat_ui/fixtures/: __init__.py  browser_fixtures.py
treat_ui/sites/base/: __init__.py  base_site.py
treat_ui/sites/base/pages/: __init__.py  base_page.py
treat_ui/sites/sweetshop/: __init__.py  sweetshop_site.py
treat_ui/sites/sweetshop/pages/: __init__.py  about_page.py  basket_page.py  login_page.py  sweets_page.py
